stats about schematics
